--- a/campos_de_python.ipynb
+++ b/campos_de_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNhs1L8p6AdrDTDhnpoCwHC",
+      "authorship_tag": "ABX9TyPW1Qg0Viou/1nTAWaCLkqP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -109,7 +109,7 @@
         "id": "DuZqaS32TTSW",
         "outputId": "e314e3d5-f8d7-4e31-aad0-66787e55a312"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,7 +151,7 @@
         "id": "faSzv44xXjxX",
         "outputId": "a44b1b45-9f86-45cb-efae-aa3c557949d3"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,7 +233,7 @@
         "id": "7K56g84FYR3j",
         "outputId": "c83941a9-0b05-49b6-cec8-12c22843dc9d"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -316,7 +316,7 @@
         "id": "lZNJ-wNxZcmh",
         "outputId": "2f1a7a27-0727-4081-e6a9-9d3573807423"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -397,7 +397,7 @@
         "id": "fnv6iHbjaEz7",
         "outputId": "54528b52-6adf-448e-d640-34671f610c85"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,7 +473,7 @@
         "id": "SRSYpudhcb86",
         "outputId": "bc74443d-f95a-45be-c384-2cc3f4935eb4"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -549,7 +549,7 @@
         "id": "PiHh_PCnfHtk",
         "outputId": "c54eabea-8110-4b39-f246-ab333975aa2c"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -617,7 +617,7 @@
         "id": "R58l16N9f9s1",
         "outputId": "237566c2-a8bf-4624-c771-ede5ce163f40"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -665,7 +665,7 @@
         "id": "zerw8MLIh8OH",
         "outputId": "fa10f4aa-1b98-4478-f31d-4b43805728a1"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -718,7 +718,7 @@
         "id": "AbyNjfMDm9Dl",
         "outputId": "66165330-f1b8-4c6e-f72c-de5745452ed7"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -767,7 +767,7 @@
         "id": "SBSecImYorHF",
         "outputId": "1eb3fdf2-dd09-4b70-b6ec-8b311f675637"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -809,7 +809,7 @@
         "id": "iGfjEm0So0km",
         "outputId": "c9f41043-1f42-488a-b891-b85fffd2815c"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -842,10 +842,340 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Nueva sección"
+      ],
+      "metadata": {
+        "id": "FXnWhdijumi4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         " nueva lista o diccionario en cada llamada a la función, evitando así los problemas relacionados con los valores predeterminados mutables."
       ],
       "metadata": {
         "id": "SZNWuvewot7Q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# files/read_write_bin.py\n",
+        "with open('example.bin', 'wb') as fw:\n",
+        "    fw.write(b'This is binary data...')\n",
+        "\n",
+        "with open('example.bin', 'rb') as f:\n",
+        "    print(f.read())  # prints: b'This is binary data...'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OJAC3im-wbDQ",
+        "outputId": "7829dcf0-a1d6-4790-a167-aa12b01bc659"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "b'This is binary data...'\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Este código demuestra cómo abrir un archivo en modo binario usando las banderas 'wb' para escribir y 'rb' para leer"
+      ],
+      "metadata": {
+        "id": "TYjTe2ikxLC-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pathlib import Path\n",
+        "\n",
+        "p = Path('fear.txt')\n",
+        "path = p.parent.absolute()\n",
+        "\n",
+        "print(p.is_file())  # True\n",
+        "print(path)  # /Users/fab/srv/lpp3e/ch08/files\n",
+        "print(path.is_dir())  # True\n",
+        "\n",
+        "q = Path('/Users/fab/srv/lpp3e/ch08/files')\n",
+        "print(q.is_dir())  # True"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0nxT0LNKxRrF",
+        "outputId": "b6534435-1724-4be9-aa2c-dd806c4db998"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n",
+            "/content\n",
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " El código ahora imprimirá los resultados de manera adecuada."
+      ],
+      "metadata": {
+        "id": "bni7f8bhyT2I"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pathlib import Path\n",
+        "\n",
+        "p = Path('fear.txt')\n",
+        "print(p.absolute())  # /Users/fab/srv/lpp3e/ch08/files/fear.txt\n",
+        "print(p.name)  # fear.txt\n",
+        "print(p.parent.absolute())  # /Users/fab/srv/lpp3e/ch08/files\n",
+        "print(p.suffix)  # .txt\n",
+        "print(p.parts)  # ('fear.txt',)\n",
+        "print(p.absolute().parts)  # ('/', 'Users', 'fab', 'srv', 'lpp3e', 'ch08', 'files', 'fear.txt')\n",
+        "\n",
+        "readme_path = p.parent / '..' / '..' / 'README.rst'\n",
+        "print(readme_path.absolute())  # /Users/fab/srv/lpp3e/ch08/files/../../README.rst\n",
+        "print(readme_path.resolve())  # /Users/fab/srv/lpp3e/README.rst"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bhVbrg82ySMt",
+        "outputId": "d7c73a03-6ef9-45df-82cd-87e929bcf8dc"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/fear.txt\n",
+            "fear.txt\n",
+            "/content\n",
+            ".txt\n",
+            "('fear.txt',)\n",
+            "('/', 'content', 'fear.txt')\n",
+            "/content/../../README.rst\n",
+            "/README.rst\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ajusté los comentarios antes de las líneas que imprimen los resultados para que reflejen correctamente la función que produce cada resultado. El código en sí mismo parece correcto y funcional.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "3eEy_R6qySkp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tempfile import NamedTemporaryFile, TemporaryDirectory\n",
+        "\n",
+        "with TemporaryDirectory(dir='.') as td:\n",
+        "    print('Temp directory:', td)\n",
+        "    with NamedTemporaryFile(dir=td) as t:\n",
+        "        name = t.name\n",
+        "        print(name)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "we4a4gGfzvj7",
+        "outputId": "502b5112-7d05-49db-c140-68985cf20662"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Temp directory: ./tmphpzv98gp\n",
+            "/content/tmphpzv98gp/tmp6zcrocl5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "Este cambio asegura que las líneas de impresión estén correctamente indentadas dentro de los bloques with. De lo contrario, podría causar un error de indentación y el código no funcionaría como se esperaba."
+      ],
+      "metadata": {
+        "id": "UmfYfqUezt-r"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tempfile import NamedTemporaryFile, TemporaryDirectory\n",
+        "\n",
+        "with TemporaryDirectory(dir='.') as td:\n",
+        "    print('Temp directory:', td)\n",
+        "    with NamedTemporaryFile(dir=td) as t:\n",
+        "        name = t.name\n",
+        "        print(name)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qJcJVfpG0K4d",
+        "outputId": "d1f84da5-7e57-4852-e5f0-86118c445e50"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Temp directory: ./tmpb9jigz3h\n",
+            "/content/tmpb9jigz3h/tmpk59n7ykx\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Este cambio asegura que las líneas de impresión estén correctamente indentadas dentro de los bloques with. De lo contrario, podría causar un error de indentación y el código no funcionaría como se esperaba."
+      ],
+      "metadata": {
+        "id": "7AvSMVoT0zG7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "\n",
+        "for root, dirs, files in os.walk('.'):\n",
+        "    abs_root = os.path.abspath(root)\n",
+        "    print(abs_root)\n",
+        "\n",
+        "    if dirs:\n",
+        "        print('Directories:')\n",
+        "        for dir_ in dirs:\n",
+        "            print(dir_)\n",
+        "        print()\n",
+        "\n",
+        "    if files:\n",
+        "        print('Files:')\n",
+        "        for filename in files:\n",
+        "            print(filename)\n",
+        "        print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zs4dApVh054N",
+        "outputId": "ad04af4b-1a23-4892-a923-2ed6e002f27d"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content\n",
+            "Directories:\n",
+            ".config\n",
+            "sample_data\n",
+            "\n",
+            "Files:\n",
+            "write_x.txt\n",
+            "example.bin\n",
+            "\n",
+            "/content/.config\n",
+            "Directories:\n",
+            "logs\n",
+            "configurations\n",
+            "\n",
+            "Files:\n",
+            ".last_update_check.json\n",
+            ".last_survey_prompt.yaml\n",
+            "default_configs.db\n",
+            ".last_opt_in_prompt.yaml\n",
+            "gce\n",
+            "active_config\n",
+            "config_sentinel\n",
+            "\n",
+            "/content/.config/logs\n",
+            "Directories:\n",
+            "2023.09.22\n",
+            "\n",
+            "/content/.config/logs/2023.09.22\n",
+            "Files:\n",
+            "13.26.04.376163.log\n",
+            "13.26.45.677687.log\n",
+            "13.26.29.809674.log\n",
+            "13.26.55.371178.log\n",
+            "13.26.38.513798.log\n",
+            "13.26.54.625978.log\n",
+            "\n",
+            "/content/.config/configurations\n",
+            "Files:\n",
+            "config_default\n",
+            "\n",
+            "/content/sample_data\n",
+            "Files:\n",
+            "anscombe.json\n",
+            "README.md\n",
+            "mnist_train_small.csv\n",
+            "california_housing_train.csv\n",
+            "mnist_test.csv\n",
+            "california_housing_test.csv\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "twjy0MIK2Deu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "El código para os.walk también parece estar en buen estado, y las correcciones aquí son para asegurarse de que las líneas de impresión estén correctamente indentadas dentro de los bucles for."
+      ],
+      "metadata": {
+        "id": "bGmDpFWw044m"
       }
     }
   ]
